Event Handling and Updating Attributes

--- a/plugins/are-you-paying-attention/src/index.scss
+++ b/plugins/are-you-paying-attention/src/index.scss
@@ -3,4 +3,27 @@
   border-radius: 2px;
   border: 1px solid #b3d9ee;
   background-color: #d9e0e8;
+
+  .mark-as-correct {
+    color: #c1ad41;
+    cursor: pointer;
+    position: relative;
+    top: -3px;
+    transition: transform 0.3s ease-out;
+
+    &:hover {
+      color: #9f8806;
+      transform: scale(1.25) rotate(12deg);
+    }
+  }
+
+  .attention-delete {
+    color: #ff0000;
+    position: relative;
+    top: -5px;
+
+    &:hover {
+      color: #c20000;
+    }
+  }
 }
